# colour-mixer

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: build.yml
frontend/: app.js  index.html  style.css
